--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -1,9 +1,10 @@
 ---
-name: Lint
+name: Super-Linter
 
 on:  # yamllint disable-line rule:truthy
   push: null
   pull_request: null
+permissions: read-all
 
 jobs:
   build:
@@ -19,9 +20,11 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Super-linter
-        uses: super-linter/super-linter@v5
+        uses: super-linter/super-linter@latest
         env:
           DEFAULT_BRANCH: main
           # To report GitHub Actions status checks
